--- a/CV.tex
+++ b/CV.tex
@@ -134,8 +134,8 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-       {National Research ITMO University}{Sept. 2021 - Present}
-      {Bachelor of Software Engineering}{GPA:4.8/5.0}
+       {ITMO University}{Sept. 2021 -- Present}
+      {Bachelor of Software Engineering}{GPA: 4.5/5.0}
     \resumeSubHeadingListEnd
 
 \section{Projects}
@@ -149,28 +149,22 @@
   
     \resumeProjSubheading
       {\href{https://github.com/PotatoCoder228/Web_Lab_4}{Single Page Application based on Spring Framework and React.js}}{St. Petersburg, Russia}
-      {\skill{Java Core} \skill{Spring Boot}
+      {\skill{Java SE} \skill{Spring Boot}
       \skill{Spring Data}
       \skill{Spring Security}
-      \skill{JavaScript} \skill{React.js} \skill{PostgreSQL} \skill{HTML} \skill{CSS}}{Jan 2023}
+      \skill{JavaScript} \skill{React.js} \skill{PostgreSQL} \skill{HTML} \skill{CSS}}{Jan. 2023}
           \resumeDesc{Web application for calculating the hit of a point in the area. The back-end was written on Spring, the front-end was written on React.js. For interaction with users, registration, authorization and an interactive area with a table of results have been developed. The results are stored in a PostgreSQL database. The interaction between the back-end and front-end is organized
           through the REST API.}
     \resumeProjSubheading
       {\href{https://github.com/DmitryLedentsov/electric-field}{Electric field visualization application}}{St. Petersburg, Russia}
       {\skill{Java SE}  \skill{JavaFX} \skill{Gradle}
-      }{Dec 2022}
-          \resumeDesc{Participated in the development of university physics project in team(2 participants). This is a GUI application that allows users to place positive or negative charges and planes on an interactive field and observe changes in the electric field strength lines and the equipotential line.}
+      }{Dec. 2022}
+          \resumeDesc{Participated in the development of university physics project in team (2 participants). This is a GUI application that allows users to place positive or negative charges and planes on an interactive field and observe changes in the electric field strength lines and the equipotential line.}
     \resumeProjSubheading
       {\href{https://github.com/PotatoCoder228/Lab_7}{Multithreaded client-server application}}{St. Petersburg, Russia}
-      {\skill{Java SE}  \skill{PostgreSQL} \skill{JDBC} \skill{Maven} \skill{Log4j2}}{Jun 2022}
+      {\skill{Java SE}  \skill{PostgreSQL} \skill{JDBC} \skill{Maven} \skill{Log4j2}}{Jun. 2022}
           \resumeDesc{A client-server application that implements the management of a collection of objects. The server module receives and executes commands that control the collection from a non-block TCP connection. The data is stored in a PostgreSQL database. A JDBC driver is used to interact with the database. The client module reads commands in multi threaded interactive mode, sends them to the server for execution and prints the results of execution.}
-          
-    \begin{comment}  
-    \resumeProjSubheading
-      {\href{https://github.com/AndroidTopTeam/MyChief}{MyChief}}{Moscow, Russia}
-      {\skill{Java} \skill{Android}}{Nov. 2017}
-      \resumeDesc{Learned Android and implemented all structure and internal code logic (activities, fragments, lru cache) of mobile app that can search for recipes with ingredients entered by user, collaborated with a team of 3 students.}
-    \end{comment}
+
       
   \resumeSubHeadingListEnd
 %
@@ -178,14 +172,14 @@
 \section{Skills}
  \resumeSubHeadingListStart
    \item{
-     \textbf{Programming}{: C, Java SE, Java EE, JavaScript, HTML, CSS, Bash, SQL(Beginner) }
+     \textbf{Programming}{: C, Java SE, Java EE, JavaScript, HTML, CSS, Bash, SQL (Beginner) }
    }\vspace{-7pt}
    \item{
-     \textbf{Technologies}{: Make, CMake, Maven, Git, Spring Boot, Spring Data, JDBC, React.js(Beginner), \LaTeX }
+     \textbf{Technologies}{: Make, CMake, Maven, Git, Spring Boot, Spring Data, JDBC, WildFly, React.js (Beginner), \LaTeX }
    }
    \vspace{-7pt}
    \item{
-     \textbf{Languages}{: Russian(Native), English(Pre-Intermediate)}
+     \textbf{Languages}{: Russian (Native), English (Pre-Intermediate)}
    }
  \resumeSubHeadingListEnd
 
