--- a/CV.tex
+++ b/CV.tex
@@ -172,7 +172,7 @@
 \section{Skills}
  \resumeSubHeadingListStart
    \item{
-     \textbf{Programming}{: C, Java SE, Java EE, JavaScript, HTML, CSS, Bash, SQL (Beginner) }
+     \textbf{Programming}{: C, C\texttt{++}, Java SE, Java EE, JavaScript, HTML, CSS, Bash, SQL (Beginner) }
    }\vspace{-7pt}
    \item{
      \textbf{Technologies}{: Make, CMake, Maven, Git, Spring Boot, Spring Data, JDBC, WildFly, React.js (Beginner), \LaTeX }
